# routes/tourRoute.js
@@ -5,6 +5,7 @@ const router = require('express').Router();
 
 router.route('/create-tour').post(authentication, restrictTo('0'), createTour);
 router.route('/get-all-tour/').get(authentication, restrictTo('0'), getAllTour);
+router.route('/getAllTour').get(getAllTour);
 router.route('/get-tour/:id').get(getTourById);
 
 module.exports = router;
